Update Florida case data

--- a/data/florida.yml
+++ b/data/florida.yml
@@ -4,7 +4,7 @@
 # https://web.archive.org/web/*/http://ww11.doh.state.fl.us/comm/_partners/covid19_report_archive/covid19-data/covid19_data_latest.pdf
 
 label: Florida
-updated: '2021-10-22'
+updated: '2021-10-29'
 authority:
   name: Florida Department of Health
   href: http://www.floridahealth.gov/
@@ -13,334 +13,334 @@ places:
     label: Alachua County
     twitter: AlachuaCounty
     population: 269_043
-    cases: [302, 195]
+    cases: [195, 160]
   baker:
     label: Baker County
     twitter: ~
     population: 29_210
-    cases: [14, 11]
+    cases: [11, 2]
   bay:
     label: Bay County
     twitter: ~
     population: 174_705
-    cases: [136, 100]
+    cases: [100, 98]
   bradford:
     label: Bradford County
     twitter: ~
     population: 28_201
-    cases: [14, 8]
+    cases: [8, 8]
   brevard:
     label: Brevard County
     twitter: BrevardCo_FL
     population: 601_942
-    cases: [370, 306]
+    cases: [306, 259]
   broward:
     label: Broward County
     twitter: BrowardCounty
     population: 1_952_778
-    cases: [1_943, 1_560]
+    cases: [1_560, 1_271]
   calhoun:
     label: Calhoun County
     twitter: ~
     population: 14_105
-    cases: [10, 6]
+    cases: [6, 5]
   charlotte:
     label: Charlotte County
     twitter: charlottecofl
     population: 188_910
-    cases: [180, 159]
+    cases: [159, 108]
   citrus:
     label: Citrus County
     twitter: ~
     population: 149_657
-    cases: [98, 79]
+    cases: [79, 69]
   clay:
     label: Clay County
     twitter: ClayCo_FL
     population: 219_252
-    cases: [166, 94]
+    cases: [94, 73]
   collier:
     label: Collier County
     twitter: CollierPIO
     population: 384_902
-    cases: [265, 184]
+    cases: [184, 203]
   columbia:
     label: Columbia County
     twitter: ~
     population: 71_686
-    cases: [38, 36]
+    cases: [36, 29]
   dade:
     label: Miami-Dade County
     twitter: MiamiDadeCounty
     population: 2_716_940
-    cases: [3_033, 2_379]
+    cases: [2_379, 2_215]
   desoto:
     label: DeSoto County
     twitter: ~
     population: 38_001
-    cases: [30, 31]
+    cases: [301, 25]
   dixie:
     label: Dixie County
     twitter: ~
     population: 16_826
-    cases: [16, 11]
+    cases: [11, 2]
   duval:
     label: Duval County
     twitter: CityofJax
     population: 957_755
-    cases: [710, 535]
+    cases: [535, 413]
   escambia:
     label: Escambia County
     twitter: myescambia
     population: 318_316
-    cases: [216, 207]
+    cases: [207, 149]
   flagler:
     label: Flagler County
     twitter: FlaglerCtyGov
     population: 115_081
-    cases: [70, 55]
+    cases: [55, 50]
   franklin:
     label: Franklin County
     twitter: ~
     population: 12_125
-    cases: [6, 3]
+    cases: [3, 5]
   gadsden:
     label: Gadsden County
     twitter: GadsdenCtyBOCC
     population: 45_660
-    cases: [36, 24]
+    cases: [24, 13]
   gilchrist:
     label: Gilchrist County
     twitter: ~
     population: 18_582
-    cases: [13, 16]
+    cases: [16, 4]
   glades:
     label: Glades County
     twitter: ~
     population: 13_811
-    cases: [17, 3]
+    cases: [3, 10]
   gulf:
     label: Gulf County
     twitter: ~
     population: 13_639
-    cases: [5, 8]
+    cases: [8, 5]
   hamilton:
     label: Hamilton County
     twitter: ~
     population: 14_428
-    cases: [22, 18]
+    cases: [18, 13]
   hardee:
     label: Hardee County
     twitter: ~
     population: 26_937
-    cases: [33, 21]
+    cases: [21, 18]
   hendry:
     label: Hendry County
     twitter: HendryCountyGov
     population: 42_022
-    cases: [27, 32]
+    cases: [32, 30]
   hernando:
     label: Hernando County
     twitter: HernandoCoGov
     population: 193_920
-    cases: [180, 102]
+    cases: [102, 63]
   highlands:
     label: Highlands County
     twitter: HighlandsFLBCC
     population: 106_221
-    cases: [96, 76]
+    cases: [96, 53]
   hillsborough:
     label: Hillsborough County
     twitter: HillsboroughFL
     population: 1_471_968
-    cases: [1_569, 1_319]
+    cases: [1_319, 887]
   holmes:
     label: Holmes County
     twitter: ~
     population: 19_617
-    cases: [43, 14]
+    cases: [14, 4]
   indian-river:
     label: Indian River County
     twitter: IRCGOV
     population: 159_923
-    cases: [83, 57]
+    cases: [57, 61]
   jackson:
     label: Jackson County
     twitter: ~
     population: 46_414
-    cases: [35, 37]
+    cases: [37, 42]
   jefferson:
     label: Jefferson County
     twitter: ~
     population: 14_246
-    cases: [9, 12]
+    cases: [12, 14]
   lafayette:
     label: Lafayette County
     twitter: ~
     population: 8_422
-    cases: [11, 18]
+    cases: [18, 4]
   lake:
     label: Lake County
     twitter: lakegov
     population: 367_118
-    cases: [384, 321]
+    cases: [321, 335]
   lee:
     label: Lee County
     twitter: LeeCountyFLBOCC
     population: 770_577
-    cases: [568, 465]
+    cases: [465, 571]
   leon:
     label: Leon County
     twitter: LeonCounty
     population: 293_582
-    cases: [288, 227]
+    cases: [227, 221]
   levy:
     label: Levy County
     twitter: ~
     population: 41_503
-    cases: [32, 33]
+    cases: [33, 19]
   liberty:
     label: Liberty County
     twitter: ~
     population: 8_354
-    cases: [16, 10]
+    cases: [10, 4]
   madison:
     label: Madison County
     twitter: ~
     population: 18_493
-    cases: [19, 11]
+    cases: [11, 0]
   manatee:
     label: Manatee County
     twitter: ManateeGov
     population: 403_253
-    cases: [332, 269]
+    cases: [269, 222]
   marion:
     label: Marion County
     twitter: MarionCountyGov
     population: 365_579
-    cases: [313, 252]
+    cases: [252, 230]
   martin:
     label: Martin County
     twitter: MartinCountygov
     population: 161_000
-    cases: [110, 111]
+    cases: [111, 76]
   monroe:
     label: Monroe County
     twitter: monroecounty
     population: 74_228
-    cases: [71, 67]
+    cases: [77, 76]
   nassau:
     label: Nassau County
     twitter: FlNassau
     population: 88_625
-    cases: [66, 64]
+    cases: [64, 51]
   okaloosa:
     label: Okaloosa County
     twitter: OkaloosaCounty
     population: 210_738
-    cases: [176, 117]
+    cases: [117, 114]
   okeechobee:
     label: Okeechobee County
     twitter: ~
     population: 42_168
-    cases: [32, 21]
+    cases: [21, 11]
   orange:
     label: Orange County
     twitter: OrangeCoFL
     population: 1_393_452
-    cases: [1_318, 1_023]
+    cases: [1_023, 834]
   osceola:
     label: Osceola County
     twitter: OsceolaCountyFl
     population: 375_751
-    cases: [411, 313]
+    cases: [313, 301]
   palm-beach:
     label: Palm Beach County
     twitter: pbcgov
     population: 1_496_770
-    cases: [1_430, 1_062]
+    cases: [1_062, 879]
   pasco:
     label: Pasco County
     twitter: PascoCountyPIO
     population: 553_947
-    cases: [435, 296]
+    cases: [296, 278]
   pinellas:
     label: Pinellas County
     twitter: PinellasCoNews
     population: 974_996
-    cases: [790, 559]
+    cases: [559, 397]
   polk:
     label: Polk County
     twitter: PolkCountyFL
     population: 724_777
-    cases: [672, 548]
+    cases: [548, 413]
   putnam:
     label: Putnam County
     twitter: fl_putnam
     population: 74_521
-    cases: [77, 47]
+    cases: [47, 29]
   santa-rosa:
     label: Santa Rosa County
     twitter: ~
     population: 184_313
-    cases: [179, 157]
+    cases: [157, 84]
   sarasota:
     label: Sarasota County
     twitter: SRQCountyGov
     population: 433_742
-    cases: [312, 190]
+    cases: [190, 178]
   seminole:
     label: Seminole County
     twitter: seminolecounty
     population: 471_826
-    cases: [370, 282]
+    cases: [282, 225]
   st-johns:
     label: St. Johns County
     twitter: StJohnsCounty
     population: 264_672
-    cases: [294, 147]
+    cases: [147, 180]
   st-lucie:
     label: St. Lucie County
     twitter: StLucieGOV
     population: 328_297
-    cases: [283, 217]
+    cases: [217, 128]
   sumter:
     label: Sumter County
     twitter: ~
     population: 132_420
-    cases: [93, 76]
+    cases: [76, 79]
   suwannee:
     label: Suwannee County
     twitter: SuwanneeCounty
     population: 44_417
-    cases: [39, 24]
+    cases: [24, 24]
   taylor:
     label: Taylor County
     twitter: ~
     population: 21_569
-    cases: [33, 18]
+    cases: [18, 9]
   union:
     label: Union County
     twitter: ~
     population: 15_237
-    cases: [8, 2]
+    cases: [2, 5]
   volusia:
     label: Volusia County
     twitter: CountyOfVolusia
     population: 553_284
-    cases: [479, 558]
+    cases: [558, 463]
   wakulla:
     label: Wakulla County
     twitter: ~
     population: 33_739
-    cases: [24, 29]
+    cases: [29, 29]
   walton:
     label: Walton County
     twitter: ~
     population: 74_071
-    cases: [57, 72]
+    cases: [72, 44]
   washington:
     label: Washington County
     twitter: ~
     population: 25_473
-    cases: [12, 10]
+    cases: [10, 5]
